crates/nexus-macros/tests/macro_compile_fail/domain_event_on_struct.rs
/// DomainEvent derive must reject structs.

#[derive(Debug, nexus::DomainEvent)]
struct NotAnEnum {
    name: String,
}

fn main() {}
